# chimera

./: .gitignore  README.md  flake.nix
backend/: deno.json  go.mod
backend/cmd/server/: main.go
backend/internal/: config.go  models.go  server.go  sqlite.go
backend/src/: api.ts  db.ts  main.ts
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
hoster/: cli.py  config.example.json  config.json  dump_manifest.py  gui_app.py  host_service.py  models.py  pyproject.toml  scanner.py  send_image.py
hoster/frontend/: app.js  index.html  styles.css
